--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ ul{
     flex:1;
 }
 .div-logo{
-    margin: 42px 30px 106px;
+    margin: 42px 30px 0;
 }
 .logo{
     font-size: 24px;
@@ -35,34 +35,67 @@ ul{
 .logo span{
     font-weight: bold;
 }
+.container-aside{
+    max-width: 230px;
+    margin: 106px auto 0;
+}
 .nav-li{
     transition: 0.3s ease-in all;
-    margin-left:40px ;
     margin-bottom: 20px;
     width: 265px;
 }
 .nav-li :hover{
     background-color: #FF2288;
     border-radius: 10px;
-    transition: 0.2s;
+    transition-duration: 0.2s;
     font-size: 18px;
 }
 .nav-li a{
     display: inline-block;
     vertical-align: middle;
-    padding: 15px 30px;
+    padding: 15px 105px 15px 20px;
 }
 .nav-li img{
     display: inline-block;
     vertical-align: middle;
     margin-right: 15px;
 }
-.font-size-color{
+.medium-size16-colorfff{
     font-size:16px;
     font-family: "Avenir Medium";
     color: #FFFFFF;
 }
+.uppercase{
+    text-transform: uppercase;
+}
+.aside-bottom img{
+    width: 44px;
+    vertical-align: middle;
+    margin-right: 21px;
+}
+.aside-bottom li{
+    margin-top: 15px;
+}
+.aside-bottom h3{
+    font-family: "Avenir Heavy";
+    font-size:12px;
+    color: #ffffff;
+    margin-bottom: 31px;
+}
+.aside-bottom li :hover{
+    font-size: 14px;
+    transition-duration: 0.3s;
+}
+.aside-bottom button{
+    background-color: #222222;
+    color: #ffffff;
+    border: none;
+    margin-top: 19px;
+    font-family: "Avenir Heavy";
+    font-size: 14px;
+}
 .main-page{
     flex:3;
 }
+
 
