--- a/styles/font.css
+++ b/styles/font.css
@@ -21,3 +21,12 @@
     url("../fonts/Avenir\ Heavy.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
     url("../fonts/901497541657a2f24e42848bcf7fad52.svg#Avenir Heavy") format("svg"); /* iOS 4.1- */
 }
+@font-face {
+  font-family: 'Avenir LT Std book';
+  src: url('../fonts/AvenirLTStd-Book.woff2') format('woff2'),
+      url('../fonts/AvenirLTStd-Book.woff') format('woff'),
+      url('../fonts/AvenirLTStd-Book.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
