--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,22 @@ ul{
     width: 1920px;
     /* width: 100%; */
 }
+.color222{
+    color: #222222;
+    opacity: 0.3;
+}
+.font-fam-heavy{
+    font-family: "Avenir Heavy"
+}
+.font-fam-medium{
+    font-family: "Avenir Medium";
+}
+.font-size14{
+    font-size: 14px;
+}
+.colorfff{
+    color: #FFFFFF;
+}
 .flex{
     display: flex;
 }
@@ -24,6 +40,7 @@ ul{
 }
 .aside-div{
     max-width: 319px;
+    height: 1080px;
     background-color: #222222;
     flex:1;
 }
@@ -32,7 +49,6 @@ ul{
 }
 .logo{
     font-size: 24px;
-    color: #FFFFFF;
 }
 .logo span{
     font-weight: bold;
@@ -61,10 +77,8 @@ ul{
     display: inline-block;
     margin-right: 15px;
 }
-.medium-size16-colorfff{
+.size16{
     font-size:16px;
-    font-family: "Avenir Medium";
-    color: #FFFFFF;
 }
 .uppercase{
     text-transform: uppercase;
@@ -80,9 +94,7 @@ ul{
     margin-top: 15px;
 }
 .aside-bottom h3{
-    font-family: "Avenir Heavy";
     font-size:12px;
-    color: #ffffff;
     margin-bottom: 31px;
 }
 .aside-bottom li :hover{
@@ -91,12 +103,9 @@ ul{
 }
 .aside-bottom button{
     background-color: #222222;
-    color: #ffffff;
     border: none;
     margin-top: 19px;
     margin-bottom: 106px;
-    font-family: "Avenir Heavy";
-    font-size: 14px;
     cursor: pointer;
 }
 /*----main page---*/
@@ -128,9 +137,6 @@ header{
 .upload{
     padding: 17px 36px;
     background-color:#FF2288 ;
-    color: #ffffff;
-    font-size: 14px;
-    font-family: "Avenir Heavy";
     border-style: none;
     border-radius: 12px;
     cursor: pointer;
@@ -251,18 +257,52 @@ header{
     cursor: pointer;
     border-radius: 12px;
 }
+.load-button-div :hover{
+    border:1px solid #beb8b8;
+}
 .icon-on-imgdiv{
     position: absolute;
     top:40px;
     left:40px;
     flex-direction: column;
-}
-/* .icon-on-imgdiv div{
-    padding: 4px;
+    padding: 3px;
     margin-bottom: 5px;
-    background-color: #ffffff;
-} */
+}
 .icon-on-imgdiv img{
     width: 24px;
 }
-
+.heart-icon{
+    top: 80px;
+}
+.designer-section{
+    background-color: #FAFAFA;
+    margin-top: 70px;
+    padding: 67px 188px 60px 180px;
+}
+.personal-div{
+    flex-direction:column;
+    align-items: center;
+    margin-top: 54px;
+}
+.personal-div h3{
+    font-family: "Avenir Medium";
+    font-size: 16px;
+    color: #222222;
+}
+.personal-div p {
+    font-family: 'Avenir LT Std book';
+    font-size: 12px;
+    color: #222222;
+    opacity: 0.6;
+    margin: 10px 0 27px;
+}
+.designer-section .personal-div:nth-child(5) p {
+    margin-top: 34px;
+}
+.personal-div button{
+    width: 134px;
+    height: 44px;
+    border:1px solid #d1cdcd ;
+    border-radius: 12px;
+    background-color: #FAFAFA;
+}
