--- a/styles/style.css
+++ b/styles/style.css
@@ -139,7 +139,6 @@ header{
     border-style: none;
     border-radius: 12px;
     cursor: pointer;
-    margin: 0 30px;
 }
 .header-right-div{
     align-items: center;
@@ -447,7 +446,7 @@ tbody :nth-child(7) td{
     }
     .footer-page{
         width: calc(100%/2);
-        padding:40px 20px;
+        /* padding:40px 20px; */
     }
     .display-none{
         display: none;
