--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,6 @@ ul{
 }
 .container-page{
    max-width:1920px;
-   width: 100%;
 }
 .color222{
     color: #222222;
@@ -139,6 +138,7 @@ header{
     border-style: none;
     border-radius: 12px;
     cursor: pointer;
+    margin-left: 20px;
 }
 .header-right-div{
     align-items: center;
@@ -162,6 +162,16 @@ header{
     top: -1px;
     right: -1px;
     opacity: 1;
+}
+.burger-div{
+    display: none;
+}
+.burger-div div{
+    width: 20px;
+    height: 2px;
+    margin: 5px 20px;
+    border-radius: 10px;
+    background-color: #ff2288;
 }
 .div-person{
     width: 56px;
@@ -446,7 +456,7 @@ tbody :nth-child(7) td{
     }
     .footer-page{
         width: calc(100%/2);
-        /* padding:40px 20px; */
+        padding:40px 20px;
     }
     .display-none{
         display: none;
@@ -465,6 +475,7 @@ tbody :nth-child(7) td{
         text-align: center;
     }
 }
+/*
 @media (max-width:650px) {
     thead{
         display: none;
@@ -484,10 +495,13 @@ tbody :nth-child(7) td{
     .table-section{
         padding: 5px;
     }
-}
-@media (max-width:400px) {
+}*/
+ @media (max-width:400px) {
     .display-none360{
         display: none;
+    }
+    .burger-div{
+        display: inline-block;
     }
     .table-section{
         width: 100%;
@@ -495,4 +509,4 @@ tbody :nth-child(7) td{
     .footer-page div{
         margin-bottom: 40px;
     }
-}
+} 
