--- a/styles/style.css
+++ b/styles/style.css
@@ -205,7 +205,7 @@ header{
     text-transform: capitalize;
 }
 .list-div{
-    margin: 0 53px 0 10px;
+    margin:53px 30px 53px 10px;
 }
 .list-div a{
     transition: linear;
